@@ -61,6 +61,9 @@ version 2.81
 	Thanks to Dereck Higgins for spotting this.
 
 	Add --tftp-single-port option.
+
+	Enhance --conf-dir to load files in a deterministic order. Thanks to
+	Evgenii Seliavka for the suggestion and initial patch.
 	
 
 version 2.80
